fix sidebar on small screans

--- a/css/custom/custom.css
+++ b/css/custom/custom.css
@@ -86,3 +86,9 @@
 #menuBtn{
   z-index: 1000;
 }
+
+@media only screen and (max-width: 900px) {
+ #trash {
+    display: none;
+  }
+}
